refactor(extensions): rename PathSkillsRegistry to FilesystemSkillsRegistry
- Add public FilesystemSkillsRegistry; deprecate PathSkillsRegistry (forRemoval)
- Widen BaseSkillsRegistry, CompositeSkillsRegistry, ClasspathSkillsRegistry, FrontmatterParser to public for reuse
- Add varargs CompositeSkillsRegistry constructor
- Skip unreadable files during skill dir scan; byte @Nullable [] return style
- Move test fixtures resources/skills -> data/skills; add read-file fixture
- Extract SkillTestFixtures helper; refactor unit + E2E tests to try-with-resources